src/test/ui/editions/edition-keywords-2015-2018-expansion.stderr
error: expected identifier, found keyword `async`
  --> $DIR/edition-keywords-2015-2018-expansion.rs:8:5
   |
LL |     produces_async! {}
   |     ^^^^^^^^^^^^^^^^^^ expected identifier, found keyword
   |
   = note: this error originates in the macro `produces_async` (in Nightly builds, run with -Z macro-backtrace for more info)
help: escape `async` to use it as an identifier
   |
LL |     () => (pub fn r#async() {})
   |                   ++

error: aborting due to previous error

